--- a/frontend/src/components/Navbar/Style.scss
+++ b/frontend/src/components/Navbar/Style.scss
@@ -65,6 +65,7 @@ a {
 @media screen and (min-width: 600px) {
   .CatButton {
     color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
   .NavBarOFixe {
     background-color: #242323;
